TestSuite/errors/err0188.pas
type TClass = class
constructor Create;
begin
  
end;
property A : TClass read Create;
end;

begin
  
end.